<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.kidshome.multimediacontroller.com.example.multimedia.controller.MainActivity"
    tools:showIn="@layout/activity_main">

    <Button
        android:id="@+id/btn_normal_user_image_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/normal_user_image_screen"/>

    <Button
        android:id="@+id/btn_super_user_image_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/super_user_image_screen"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_normal_user_image_layout" />

    <Button
        android:id="@+id/btn_normal_user_audio_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/normal_user_audio_screen"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_super_user_image_layout" />

    <Button
        android:id="@+id/btn_super_user_audio_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/super_user_audio_screen"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_normal_user_audio_layout" />

    <Button
        android:id="@+id/btn_normal_user_video_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/normal_user_video_screen"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_super_user_audio_layout" />

    <Button
        android:id="@+id/btn_super_user_video_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/super_user_video_screen"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_normal_user_video_layout" />
</android.support.constraint.ConstraintLayout>
